--- a/style.css
+++ b/style.css
@@ -35,9 +35,6 @@ header a:hover {
   outline: 1px solid #000000;
 }
 
-main {
-  width: 100vw;
-}
 main .container_summary {
   height: 39.625rem;
   background-image: url(assets/background.png);
@@ -71,4 +68,97 @@ main .container_summary div button {
   font-size: 1.25rem;
   border: none;
   cursor: pointer;
+}
+main .container_integrated_port_management {
+  height: 100vh;
+  display: flex;
+  padding: 150px;
+  justify-content: space-around;
+}
+main .container_integrated_port_management div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+main .container_integrated_port_management div span {
+  font-family: "Oswald", serif;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #0017e9;
+}
+main .container_integrated_port_management div h3 {
+  width: 29.625rem;
+  font-family: "Roboto", serif;
+  font-size: 2.5rem;
+  line-height: 42.19px;
+}
+main .container_integrated_port_management div p {
+  width: 29.625rem;
+  font-size: 1.5rem;
+  font-weight: 400;
+  font-family: "Roboto", serif;
+  line-height: 28.13px;
+}
+main .container_integrated_port_management div a {
+  font-family: "Roboto", serif;
+  font-size: 1.5rem;
+  line-height: 28.13px;
+  text-decoration: none;
+  color: #0017e9;
+}
+main .container_soluctions {
+  background-color: #d8d8d8;
+  font-family: "Oswald", serif;
+  height: 64rem;
+  padding: 85px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+main .container_soluctions div {
+  height: 7rem;
+  display: flex;
+  flex-direction: column;
+}
+main .container_soluctions div h3 {
+  font-size: 1.5rem;
+  line-height: 35.57px;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #0017e9;
+}
+main .container_soluctions div span {
+  font-size: 1.5rem;
+  line-height: 35.57px;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin-top: 20px;
+}
+main .container_soluctions .cards {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+main .container_soluctions .cards .card {
+  background-color: white;
+  box-shadow: 0 4px 6px 5px rgba(0, 0, 0, 0.1);
+  width: 22.938rem;
+  height: 30.25rem;
+  text-align: start;
+}
+main .container_soluctions .cards .card figcaption {
+  padding: 15px;
+}
+main .container_soluctions .cards .card figcaption h4 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 35.57px;
+  margin-bottom: 30px;
+}
+main .container_soluctions .cards .card figcaption p {
+  font-size: 1.5rem;
+  font-weight: 200;
 }/*# sourceMappingURL=style.css.map */
