--- a/style.scss
+++ b/style.scss
@@ -170,14 +170,19 @@ main {
     }
   }
   .container_services {
+    display: flex;
+
+    justify-content: space-evenly;
+
     height: 64rem;
     font-family: "Oswald", serif;
     text-transform: uppercase;
     padding: 100px;
     .customer_service_and_sales {
-      width: 50%;
-      height: 10;
-      background-color: aqua;
+      width: 60%;
+      height: 80vh;
+      display: flex;
+      flex-direction: column;
       h2 {
         color: rgba(0, 23, 233, 1);
         font-size: 2rem;
@@ -187,12 +192,68 @@ main {
       }
       div {
         display: flex;
-        background-color: brown;
+        width: 60%;
+        margin-top: 50px;
+        justify-content: space-between;
         figcaption {
           color: rgba(0, 0, 0, 1);
           font-weight: 500;
         }
       }
     }
+    .container_talk_to_us {
+      display: flex;
+      flex-direction: column;
+
+      width: 30%;
+      height: 100%;
+      h2 {
+        color: rgba(0, 23, 233, 1);
+        font-size: 2rem;
+      }
+      span {
+        font-size: 1.5rem;
+      }
+      form {
+        display: flex;
+        height: 70vh;
+        flex-direction: column;
+        margin-top: 40px;
+        label {
+          width: 1.25rem;
+          font-weight: 300;
+          margin-top: 16px;
+        }
+        input {
+          width: 332px;
+          height: 50px;
+          border: 1px solid;
+        }
+        textarea {
+          width: 332px;
+          border: 1px solid;
+          resize: none;
+        }
+        button {
+          width: 332px;
+          height: 58px;
+          font-size: 1.25rem;
+          margin-top: 50px;
+          background: rgba(0, 23, 233, 1);
+          border: none;
+          text-transform: uppercase;
+          color: #ffffff;
+        }
+      }
+    }
   }
+}
+
+footer {
+  font-family: "Oswald", serif;
+  height: 5vh;
+  background-color: rgba(216, 216, 216, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
