--- a/style.css
+++ b/style.css
@@ -70,10 +70,12 @@ main .container_summary div button {
   cursor: pointer;
 }
 main .container_integrated_port_management {
-  height: 100vh;
   display: flex;
-  padding: 150px;
+  padding: 100px;
   justify-content: space-around;
+}
+main .container_integrated_port_management img {
+  width: 45%;
 }
 main .container_integrated_port_management div {
   display: flex;
@@ -113,6 +115,7 @@ main .container_soluctions {
   padding: 85px;
   text-align: center;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
 }
@@ -136,8 +139,8 @@ main .container_soluctions div span {
   margin-top: 20px;
 }
 main .container_soluctions .cards {
-  height: 100vh;
   width: 100%;
+  height: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -236,6 +239,41 @@ main .container_services .container_talk_to_us form button {
   border: none;
   text-transform: uppercase;
   color: #ffffff;
+  cursor: pointer;
+}
+@media (min-width: 768px) and (max-width: 1300px) {
+  main .container_soluctions {
+    background-color: green;
+    width: 100%;
+    height: 100%;
+  }
+  main .container_soluctions .cards {
+    justify-content: space-between;
+    flex-direction: column;
+    width: 100%;
+  }
+  main .container_soluctions .cards .card {
+    margin-top: 20px;
+    width: 20rem;
+  }
+  main .container_soluctions .cards .card img {
+    width: 100%;
+  }
+  main .container_integrated_port_management {
+    justify-content: center;
+  }
+  main .container_integrated_port_management img {
+    margin-left: 50px;
+  }
+  main .container_integrated_port_management div span, main .container_integrated_port_management div a {
+    font-size: 1rem;
+  }
+  main .container_integrated_port_management div h3 {
+    font-size: 2rem;
+  }
+  main .container_integrated_port_management div p {
+    font-size: 0.9rem;
+  }
 }
 
 footer {
