--- a/style.scss
+++ b/style.scss
@@ -73,10 +73,12 @@ main {
     }
   }
   .container_integrated_port_management {
-    height: 100vh;
     display: flex;
-    padding: 150px;
+    padding: 100px;
     justify-content: space-around;
+    img {
+      width: 45%;
+    }
     div {
       display: flex;
       flex-direction: column;
@@ -117,6 +119,7 @@ main {
     padding: 85px;
     text-align: center;
     display: flex;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
 
@@ -140,8 +143,8 @@ main {
       }
     }
     .cards {
-      height: 100vh;
       width: 100%;
+      height: 100%;
       display: flex;
       justify-content: space-around;
       align-items: center;
@@ -151,7 +154,6 @@ main {
         width: 22.938rem;
         height: 30.25rem;
         text-align: start;
-
         figcaption {
           padding: 15px;
 
@@ -168,6 +170,7 @@ main {
         }
       }
     }
+
   }
   .container_services {
     display: flex;
@@ -243,6 +246,46 @@ main {
           border: none;
           text-transform: uppercase;
           color: #ffffff;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+  @media (min-width: 768px) and (max-width: 1300px) {
+    .container_soluctions {
+      background-color: green;
+      width: 100%;
+      height: 100%;
+      .cards {
+        justify-content: space-between;
+        flex-direction: column;
+        width: 100%;
+       
+        .card {
+          margin-top: 20px;
+          img{
+            width: 100%;
+          }
+          width: 20rem;
+        }
+      }
+    }
+    .container_integrated_port_management{
+      justify-content: center;
+      img{
+        margin-left: 50px;
+      }
+      div{
+        span ,a{
+        font-size: 1rem;
+        }
+        h3{
+        font-size: 2rem;
+
+        }
+        p{
+          font-size: 0.9rem;
+      
         }
       }
     }
