--- a/style.scss
+++ b/style.scss
@@ -35,6 +35,29 @@ header {
     outline: 1px solid #000000;
   }
 }
+@media (min-width: 320px) and (max-width: 900px) {
+  header {
+    height: 100%;
+    h2 {
+      color: red;
+      display: none;
+    }
+    nav {
+      width: 100%;
+      height: 100%;
+    }
+    ul {
+      flex-direction: column;
+    }
+    a {
+      padding: 0;
+      font-size: 1.25rem;
+    }
+    a:hover {
+      display: none;
+    }
+  }
+}
 
 main {
   .container_summary {
@@ -170,7 +193,6 @@ main {
         }
       }
     }
-
   }
   .container_services {
     display: flex;
@@ -251,42 +273,125 @@ main {
       }
     }
   }
-  @media (min-width: 768px) and (max-width: 1300px) {
+  @media (min-width: 900px) and (max-width: 1300px) {
     .container_soluctions {
       background-color: green;
       width: 100%;
       height: 100%;
       .cards {
         justify-content: space-between;
-        flex-direction: column;
+        // flex-direction: column;
         width: 100%;
-       
+
         .card {
           margin-top: 20px;
-          img{
+          img {
             width: 100%;
           }
-          width: 20rem;
+          width: 15rem;
         }
       }
     }
-    .container_integrated_port_management{
+    .container_integrated_port_management {
       justify-content: center;
-      img{
+      img {
         margin-left: 50px;
       }
-      div{
-        span ,a{
-        font-size: 1rem;
+      div {
+        span,
+        a {
+          font-size: 1rem;
         }
-        h3{
-        font-size: 2rem;
-
+        h3 {
+          font-size: 2rem;
         }
-        p{
+        p {
           font-size: 0.9rem;
-      
         }
+      }
+    }
+    .container_services {
+      flex-direction: column;
+      height: 100%;
+      padding: 100px;
+      align-items: center;
+      .customer_service_and_sales {
+        width: 100%;
+        div {
+          width: 100%;
+          margin-right: 5px;
+        }
+      }
+      .container_talk_to_us {
+        margin-top: 200px;
+      }
+    }
+  }
+  @media (min-width: 320px) and (max-width: 900px) {
+    .container_summary {
+      div {
+        padding-left: 0px;
+        align-items: center;
+        h1 {
+          font-size: 4rem;
+        }
+        p {
+          font-size: 1rem;
+        }
+      }
+    }
+    .container_integrated_port_management {
+      text-align: center;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0px;
+      div {
+        width: 100%;
+        text-align: left;
+        h3 {
+          font-size: 1rem;
+          width: 100%;
+        }
+        p {
+          font-size: 1rem;
+          width: 100%;
+        }
+      }
+      img {
+        margin-top: 10px;
+        width: 70%;
+      }
+    }
+    .container_soluctions {
+      height: 100%;
+      .cards {
+        margin-top: 20px;
+        flex-direction: column;
+        .card {
+          margin-top: 15px;
+        }
+      }
+    }
+    .container_services {
+      flex-direction: column;
+      height: 100%;
+      padding: 100px;
+      text-align: center;
+      align-items: center;
+      .customer_service_and_sales {
+        width: 100%;
+        height: 100%;
+        div {
+          align-items: center;
+          width: 100%;
+          flex-direction: column;
+        }
+      }
+      .container_talk_to_us {
+        width: 100%;
+        margin-top: 150px;
+        align-items: center;
       }
     }
   }
